<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.iutbm.example.iutbm.couchot.healthybody.MainActivity">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:scaleType="fitXY"
            android:src="@drawable/ic_back_icon" />
    </LinearLayout>


<!--Se connecter-->
    <LinearLayout
        android:id="@+id/Connection"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >

        <TextView
            android:textStyle="bold"
            android:textSize="40sp"
            android:textColor="#fff"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:textColor="#fff"
            android:textColorHint="#eee"
            android:paddingStart="30dp"
            android:paddingLeft="30dp"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/rounded_corner"
            android:textSize="17sp" />
        <EditText
            android:textColor="#fff"
            android:textColorHint="#eee"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/rounded_corner"
            android:textSize="17sp" />
        <Button
            android:id="@+id/btnConnect"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:background="@drawable/rounded_corner_button"
            android:text="@string/sign"
            android:textColor="#777"
            android:layout_width="wrap_content"
            android:layout_height="35dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="right">
            <TextView
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:text="@string/souvenir"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
<!-- Registre -->

    <LinearLayout
        android:id="@+id/Registre"
        android:visibility="invisible"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >

        <TextView
            android:textStyle="bold"
            android:textSize="40sp"
            android:textColor="#fff"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:textColor="#fff"
            android:textColorHint="#eee"
            android:paddingStart="30dp"
            android:paddingLeft="30dp"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/rounded_corner"
            android:textSize="17sp" />
        <EditText
            android:textColor="#fff"
            android:textColorHint="#eee"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/rounded_corner"
            android:textSize="17sp" />


        <EditText
            android:textColor="#fff"
            android:textColorHint="#eee"
            android:paddingStart="25dp"
            android:hint="Prenom"
            android:inputType="text"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/rounded_corner"
            android:textSize="17sp" />
        <EditText
            android:textColor="#fff"
            android:textColorHint="#eee"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:layout_marginLeft="68dp"
            android:layout_marginRight="68dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:hint="Nom"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/rounded_corner"
            android:textSize="17sp" />

        <Button
            android:id="@+id/btnRegistreAccount"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:background="@drawable/rounded_corner_button"
            android:text="@string/signAccount"
            android:textColor="#777"
            android:layout_width="wrap_content"
            android:layout_height="35dp" />


    </LinearLayout>


<TextView
    android:id="@+id/txtGuide"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_alignParentBottom="true"
    android:gravity="center"
    android:layout_margin="25dp"
    android:layout_height="wrap_content"
    android:text="@string/Registre"
    android:textColor="#ED7899"/>


</RelativeLayout>
